# nnet

./: .gitignore  CMakeLists.txt  README.md
src/: NeuralNetwork.cpp  activations.h  matrix.cpp  matrix.h  mlp.h  preprocessing.h
